# rust_academy

./: Cargo.toml  readme.md
docs/: closures-iterators.md
src/ratatui/: 01_basic.rs  02_counter.rs
src/ratatui/basic/: main.rs
src/ratatui/counter/: errors.rs  main.rs  tui.rs
src/ratatui/json/: app.rs  main.rs
