[package]
name = "rust_academy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello-world"
path = "src/ratatui_1.rs"

#[[bin]]
#name = "client"
#path = "src/client/bin/main.rs"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
