[package]
name = "rust_academy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# cargo run --bin basic
[[bin]]
name = "basic"
path = "src/ratatui/basic/main.rs"

# cargo run --bin counter
[[bin]]
name = "counter"
path = "src/ratatui/counter/main.rs"

#[[bin]]
#name = "client"
#path = "src/client/bin/main.rs"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

